# hemeSens

./: CMakeLists.txt  Main.qml  Main.qml.autosave  README.md  Resource.qrc  main.cpp
